# Phonehome

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  Dockerfile  PRD.md  PROOF.md  README.md  RELEASING.md  RESEARCH.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml
core/: Cargo.toml
core/data/: entities.toml  oui.csv  trackers.txt
core/examples/: gen_fixture.rs
core/src/: enrich.rs  event.rs  ingest.rs  lib.rs  naming.rs  oui.rs  replay.rs  score.rs
daemon/: Cargo.toml
daemon/src/: adguard.rs  ingest.rs  main.rs  pihole.rs  store.rs
daemon/tests/: replayer_e2e.rs
docs/: INSTALL.md
fixtures/: README.md  household-01.jsonl
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
ui/e2e/: diff.spec.ts  hero.spec.ts  perf.spec.ts  smoke.spec.ts  wizard.spec.ts
ui/scripts/: gen-centroids.mjs  record-hero.mjs
ui/src/: App.tsx  api.ts  diff.test.ts  diff.ts  index.css  setup.test.ts  setup.ts  useSSE.ts
ui/src/components/: Devices.tsx  DrillPanel.tsx  FilterRail.tsx  FixtureBadge.tsx  Hud.tsx  Meter.tsx  NameEditor.tsx  ScorecardPanel.tsx  SetupWizard.tsx  WeeklyDiffPanel.tsx
ui/src/globe/: ArcsMesh.ts  GlobeCanvas.tsx  GlobeScene.ts  countryCentroids.test.ts  countryCentroids.ts  frameStats.ts  hero.ts  math.test.ts  math.ts  stress.ts
