[package]
name = "phonehome-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phonehome core: normalized event model, device identity, enrichment (source-agnostic)"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
