[package]
name = "phonehome-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phonehome core: event model, ingestion contract, replayer, enrichment + scorecard (source-agnostic)"

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
