[package]
name = "phonehome-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phonehome daemon: single binary serving the API, embedded UI, and ingestion loops"

[dependencies]
async-trait = "0.1"
axum = "0.8"
mime_guess = "2"
phonehome-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8"
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
